# batmon

./: AGENTS.md  Cargo.toml  README.md  batwatch.toml
scripts/: common.sh  critical-low.sh  full.sh  hybrid-sleep-if-needed.sh  install-icons.sh  install.sh  on-charging.sh  on-discharge.sh  on-plugged-in.sh  ppd-balanced.sh  ppd-performance.sh  warn-low.sh
src/: actions.rs  config.rs  main.rs  support_files.rs  tests.rs
