[package]
name = "batwatch"
version = "0.1.0"
edition = "2024"
description = "UPower battery monitor that runs configurable local hooks"
readme = "README.md"
license = "MIT"
keywords = ["battery", "upower", "dbus", "linux"]
categories = ["command-line-utilities"]

[dependencies]
dbus = "0.9.10"
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.27.0"
toml = "1.1.2"
